--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="The Pure Love of Christ">
     <meta property="og:description" content="The Pure Love of Christ - Is based on the need we have, as disciples of Jesus Christ, to serve others.">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://raw.githubusercontent.com/yourdesignerfriends/wdd330-the-pure-love-of-christ/refs/heads/main/src/public/images/hero-large.webp">
     <meta property="og:url" content="">
     <meta property="fb:app_id" content="471826709228983">
 
@@ -87,8 +87,8 @@
         </div>
         <p id="copyright"></p>
     </footer>
-    <script src="scripts/hamburgerMenu.js" defer></script>
-    <script src="scripts/darkMode.js" defer></script>
-    <script src="scripts/copyright.js" defer></script>
+    <script type="module" src="scripts/hamburgerMenu.js"></script>
+    <script type="module" src="scripts/darkMode.js"></script>
+    <script type="module" src="scripts/copyright.js"></script>
   </body>
 </html>
