Dynamically-generate-the-header-and-footer Ready yaygit add .

--- a/src/challenges/index.html
+++ b/src/challenges/index.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The pure love of Christ</title>
+    <meta name="description" content="The Pure Love of Christ - Is based on the need we have, as disciples of Jesus Christ, to serve others.">
+    <meta name="author" content="Analina Del Vecchio">
+
+    <meta property="og:title" content="The Pure Love of Christ">
+    <meta property="og:description" content="The Pure Love of Christ - Is based on the need we have, as disciples of Jesus Christ, to serve others.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://raw.githubusercontent.com/yourdesignerfriends/wdd330-the-pure-love-of-christ/refs/heads/main/src/images/hero-large.webp">
+    <meta property="og:url" content="">
+    <meta property="fb:app_id" content="471826709228983">
+
+    <link rel="icon" href="/favicon.ico">
+
+    <link rel="stylesheet" href="/styles/base.css">
+    <link rel="stylesheet" href="/styles/larger.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
-<body>
-    
-</body>
+  <body>
+    <header id="header"></header>     
+    <nav id="nav" class="navigation"></nav>
+      <main>
+        <div class="hero">
+            <picture>
+                <source srcset="/images/hero-2-large.webp" media="(min-width: 960px)" class="hero-image">
+                <source srcset="/images/hero-2-medium.webp" media="(min-width: 760px)" class="hero-image">
+                <img src="/images/hero-2-small.webp" alt="Love of Christ" width="560" height="420" class="hero-image">
+            </picture>
+            <div class="hero-label">
+                <h1>The Pure<br>Love of Christ</h1>
+            </div>
+        </div>
+        <footer id="footer"></footer>
+      </main>
+    <script type="module" src="/scripts/main.js"></script>
+  </body>
 </html>
