--- a/src/challenges/index.html
+++ b/src/challenges/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="The Pure Love of Christ">
     <meta property="og:description" content="The Pure Love of Christ - Is based on the need we have, as disciples of Jesus Christ, to serve others.">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://raw.githubusercontent.com/yourdesignerfriends/wdd330-the-pure-love-of-christ/refs/heads/main/src/images/hero-large.webp">
+    <meta property="og:image" content="https://dashing-kitten-3c9ba5.netlify.app/images/hero-large.webp">
     <meta property="og:url" content="">
     <meta property="fb:app_id" content="471826709228983">
 
