API-verse-of-the-day

--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,10 @@
                 <h1>The Pure<br>Love of Christ</h1>
             </div>
         </div>
+        <div class="verse-of-the-day">
+          <blockquote id="verse"></blockquote>
+          <cite id="reference"></cite>
+        </div>
         <footer id="footer"></footer>
       </main>
     <script type="module" src="/scripts/main.js"></script>
