Bored API challenge of the day complete!!! yay!!!!!!

--- a/src/challenges/index.html
+++ b/src/challenges/index.html
@@ -37,8 +37,16 @@
                 <h1>The Pure<br>Love of Christ</h1>
             </div>
         </div>
+        <div class="challenge-of-the-day">
+          <h2>Charity Challenge of the Day</h2>
+          <p id="challenge"></p>
+          <button id="accept-challenge">Accept</button>
+          <button id="reject-challenge">Reject</button>
+          <button id="new-challenge" style="display:none;">New Challenge</button>
+        </div>
         <footer id="footer"></footer>
       </main>
     <script type="module" src="/scripts/main.js"></script>
+    <script type="module" src="/scripts/challenges.js"></script>
   </body>
 </html>
