localStorage load challenges and write reflections on them

--- a/src/my-reflections/index.html
+++ b/src/my-reflections/index.html
@@ -28,17 +28,22 @@
     <nav id="nav" class="navigation"></nav>
       <main>
         <div class="hero">
-            <picture>
-                <source srcset="/images/hero-3-large.webp" media="(min-width: 960px)" class="hero-image">
-                <source srcset="/images/hero-3-medium.webp" media="(min-width: 760px)" class="hero-image">
-                <img src="/images/hero-3-small.webp" alt="Love of Christ" width="560" height="420" class="hero-image">
-            </picture>
-            <div class="hero-label">
-                <h1>The Pure<br>Love of Christ</h1>
-            </div>
+          <picture>
+            <source srcset="/images/hero-3-large.webp" media="(min-width: 960px)" class="hero-image">
+            <source srcset="/images/hero-3-medium.webp" media="(min-width: 760px)" class="hero-image">
+            <img src="/images/hero-3-small.webp" alt="Love of Christ" width="560" height="420" class="hero-image">
+          </picture>
+          <div class="hero-label">
+            <h1>The Pure<br>Love of Christ</h1>
+          </div>
+          </div>
+            <h2>My Reflections</h2>
+            <p class="subtitle">Write your reflections for each challenge you have accepted</p>
+          <div id="my-challenges-list"></div>
         </div>
         <footer id="footer"></footer>
       </main>
     <script type="module" src="/scripts/main.js"></script>
+    <script type="module" src="/scripts/my-reflections.js"></script>
   </body>
 </html>
