--- a/src/my-reflections/index.html
+++ b/src/my-reflections/index.html
@@ -23,7 +23,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
-  <body>
+  <body class="my-reflections-page">
     <header id="header"></header>     
     <nav id="nav" class="navigation"></nav>
       <main>
