--- a/src/index.html
+++ b/src/index.html
@@ -44,5 +44,6 @@
         <footer id="footer"></footer>
       </main>
     <script type="module" src="/scripts/main.js"></script>
+    <script type="module" src="/scripts/quoteOfTheDay.js"></script>
   </body>
 </html>
